Dropdown cropping issue fixed

--- a/app/assets/stylesheets/layouts/editor/_steps.css.sass
+++ b/app/assets/stylesheets/layouts/editor/_steps.css.sass
@@ -308,7 +308,7 @@
   /*-----------  Step Navigations  -----------*/
 
   .step-navigation
-    margin: 3em 0 0
+    margin: 3em 0 4em 0
     text-align: center
 
     nav
